[package]
name = "rustegrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
pest = "2.6.1"
pest_derive = "2.6.1"
num = "0.4"
num-traits = "0.2.15"
num-bigint = "0.4.3"
rand = "0.9.0-alpha.1"
regex = "1.10.4"
config = "0.14.0"
[[bin]]
name = "create_integrale"
path = "src/create_integral.rs"